@@ -17,6 +17,7 @@ launchpad-buildd (190) UNRELEASED; urgency=medium
   * Fix get_arch_bits for Python 3.
   * Skip tests involving daemonisation on Python 3 and Twisted < 16.4.0.
   * Only include mock in tests_require for Python 2.
+  * Fix snap proxy testing for Python 3.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Apr 2020 10:19:27 +0100
 
